[metadata]
name = cyberlang
version = 0.6.3
description = A self-contained Cyber intepreter
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/DaelonSuzuka/cyber-python
author = David Kincaid
author_email = dlkincaid0@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls = 
    Source = https://github.com/DaelonSuzuka/cyber-python
    Tracker = https://github.com/DaelonSuzuka/cyber-python/issues

[options]
zip_safe = False
packages = find:
platforms = any
python_requires = >=3.8

[options.package_data]
cyber = lib/*

[aliases]
test=pytest
